--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node-dev ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,5 +21,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "session-file-store": "^1.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
+    "node-dev": "^6.2.0"
   }
 }
